--- a/app/client/style.css
+++ b/app/client/style.css
@@ -46,15 +46,11 @@ body .navbar {
   padding-bottom: 20px;
 }
 
-footer, footer a {
-  color: var(--matr-navbar-text-color);
-}
-
 .landing-part1 {
   background: url('/images/pexels-mali-maeder-802221.jpg') fixed center;
   background-size: cover;
   color: white;
-  height: 50vh;
+  min-height: 60vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -63,44 +59,54 @@ footer, footer a {
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
 }
+.landing-part2 {
+  height: 30vh;
 
-.mission-footer {
-  color: black;
-  height: 40vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .mission-footer {
+    color: black;
+    padding: 4rem 0 2rem 0;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: center;
+  }
 
-/* Buttons */
-.btn-outline-light {
-  font-size: 20px !important;
-  padding: 12px 26px !important;
-  transition: all 0.3s ease-out !important;
-}
+  /* Buttons */
 
-.btn-light {
-  font-size: 20px !important;
-  padding: 12px 26px !important;
-  transition: all 0.3s ease-out !important;
-}
+  .btn-outline-light {
+    font-size: 20px !important;
+    padding: 12px 26px !important;
+    transition: all 0.3s ease-out !important;
+  }
 
-.btn:hover {
-  transition: all 0.3s ease-out !important;
-  background: #fff !important;
-  color: #242424 !important;
-  transition: 250ms !important;
-}
+  .btn-light {
+    font-size: 20px !important;
+    padding: 12px 26px !important;
+    transition: all 0.3s ease-out !important;
+  }
 
-.navbar-toggler{
-  color: white !important;
-  background-color: white !important;
-}
+  .btn:hover {
+    transition: all 0.3s ease-out !important;
+    background: #fff !important;
+    color: #242424 !important;
+    transition: 250ms !important;
+  }
 
-/* card */
-.mission-card:hover {
-  transition: all 0.3s ease-out !important;
-  background: #fff !important;
-  color: #242424 !important;
-  transition: 250ms !important;
+  .navbar-toggler {
+    color: white !important;
+    background-color: white !important;
+  }
+
+  /* card */
+  .mission-card {
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+    -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    border-radius: 10px;
+    overflow: hidden;
+    text-decoration: none;
+  }
 }
